displaying next 7days weather forecast

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqtycD0WqSeQ/285zzemIH",
+      "authorship_tag": "ABX9TyM933j4PtsWgpfmwaS4SIz9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,74 +141,74 @@
     {
       "cell_type": "code",
       "source": [
-        "# import required modules\n",
-        "import requests, json\n",
+        "# # import required modules\n",
+        "# import requests, json\n",
         "\n",
-        "# Enter your API key here\n",
-        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "# # Enter your API key here\n",
+        "# api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
         "\n",
-        "# base_url variable to store url\n",
-        "base_url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+        "# # base_url variable to store url\n",
+        "# base_url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
         "\n",
-        "# Give city name\n",
-        "city_name = input(\"Enter city name : \")\n",
+        "# # Give city name\n",
+        "# city_name = input(\"Enter city name : \")\n",
         "\n",
-        "# complete_url variable to store\n",
-        "# complete url address\n",
-        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "# # complete_url variable to store\n",
+        "# # complete url address\n",
+        "# complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
         "\n",
-        "# get method of requests module\n",
-        "# return response object\n",
-        "response = requests.get(complete_url)\n",
+        "# # get method of requests module\n",
+        "# # return response object\n",
+        "# response = requests.get(complete_url)\n",
         "\n",
-        "# json method of response object\n",
-        "# convert json format data into\n",
-        "# python format data\n",
-        "x = response.json()\n",
+        "# # json method of response object\n",
+        "# # convert json format data into\n",
+        "# # python format data\n",
+        "# x = response.json()\n",
         "\n",
-        "# Now x contains list of nested dictionaries\n",
-        "# Check the value of \"cod\" key is equal to\n",
-        "# \"404\", means city is found otherwise,\n",
-        "# city is not found\n",
-        "if x[\"cod\"] != \"404\":\n",
+        "# # Now x contains list of nested dictionaries\n",
+        "# # Check the value of \"cod\" key is equal to\n",
+        "# # \"404\", means city is found otherwise,\n",
+        "# # city is not found\n",
+        "# if x[\"cod\"] != \"404\":\n",
         "\n",
-        "\t# store the value of \"main\"\n",
-        "\t# key in variable y\n",
-        "\ty = x[\"main\"]\n",
+        "# \t# store the value of \"main\"\n",
+        "# \t# key in variable y\n",
+        "# \ty = x[\"main\"]\n",
         "\n",
-        "\t# store the value corresponding\n",
-        "\t# to the \"temp\" key of y\n",
-        "\tcurrent_temperature = y[\"temp\"]\n",
+        "# \t# store the value corresponding\n",
+        "# \t# to the \"temp\" key of y\n",
+        "# \tcurrent_temperature = y[\"temp\"]\n",
         "\n",
-        "\t# store the value corresponding\n",
-        "\t# to the \"pressure\" key of y\n",
-        "\tcurrent_pressure = y[\"pressure\"]\n",
+        "# \t# store the value corresponding\n",
+        "# \t# to the \"pressure\" key of y\n",
+        "# \tcurrent_pressure = y[\"pressure\"]\n",
         "\n",
-        "\t# store the value corresponding\n",
-        "\t# to the \"humidity\" key of y\n",
-        "\tcurrent_humidity = y[\"humidity\"]\n",
+        "# \t# store the value corresponding\n",
+        "# \t# to the \"humidity\" key of y\n",
+        "# \tcurrent_humidity = y[\"humidity\"]\n",
         "\n",
-        "\t# store the value of \"weather\"\n",
-        "\t# key in variable z\n",
-        "\tz = x[\"weather\"]\n",
+        "# \t# store the value of \"weather\"\n",
+        "# \t# key in variable z\n",
+        "# \tz = x[\"weather\"]\n",
         "\n",
-        "\t# store the value corresponding\n",
-        "\t# to the \"description\" key at\n",
-        "\t# the 0th index of z\n",
-        "\tweather_description = z[0][\"description\"]\n",
+        "# \t# store the value corresponding\n",
+        "# \t# to the \"description\" key at\n",
+        "# \t# the 0th index of z\n",
+        "# \tweather_description = z[0][\"description\"]\n",
         "\n",
-        "\t# print following values\n",
-        "\tprint(\" Temperature (in kelvin unit) = \" +\n",
-        "\t\t\t\t\tstr(current_temperature) +\n",
-        "\t\t\"\\n atmospheric pressure (in hPa unit) = \" +\n",
-        "\t\t\t\t\tstr(current_pressure) +\n",
-        "\t\t\"\\n humidity (in percentage) = \" +\n",
-        "\t\t\t\t\tstr(current_humidity) +\n",
-        "\t\t\"\\n description = \" +\n",
-        "\t\t\t\t\tstr(weather_description))\n",
+        "# \t# print following values\n",
+        "# \tprint(\" Temperature (in kelvin unit) = \" +\n",
+        "# \t\t\t\t\tstr(current_temperature) +\n",
+        "# \t\t\"\\n atmospheric pressure (in hPa unit) = \" +\n",
+        "# \t\t\t\t\tstr(current_pressure) +\n",
+        "# \t\t\"\\n humidity (in percentage) = \" +\n",
+        "# \t\t\t\t\tstr(current_humidity) +\n",
+        "# \t\t\"\\n description = \" +\n",
+        "# \t\t\t\t\tstr(weather_description))\n",
         "\n",
-        "else:\n",
-        "\tprint(\" City Not Found \")\n"
+        "# else:\n",
+        "# \tprint(\" City Not Found \")\n"
       ],
       "metadata": {
         "colab": {
@@ -231,6 +231,236 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "# Enter your API key here\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "\n",
+        "# base_url variable to store the URL\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "# Ask for the city name from the user\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "\n",
+        "# complete_url variable to store the complete URL address\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "\n",
+        "# Send the GET request to the API\n",
+        "response = requests.get(complete_url)\n",
+        "\n",
+        "# Convert the response to JSON format\n",
+        "data = response.json()\n",
+        "\n",
+        "# Check if the city is found in the response data\n",
+        "if data[\"cod\"] != \"404\":\n",
+        "\n",
+        "    # Get the list of forecasted weather data\n",
+        "    forecast_list = data[\"list\"]\n",
+        "\n",
+        "    # Print the weather forecast for each day\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        temperature = forecast[\"main\"][\"temp\"]\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "        print(\"Date & Time:\", date_time)\n",
+        "        print(\"Temperature (in Kelvin):\", temperature)\n",
+        "        print(\"Weather Description:\", weather_description)\n",
+        "        print(\"-----------------------------------\")\n",
+        "\n",
+        "else:\n",
+        "    print(\"City not found\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7yWF2oLNJesO",
+        "outputId": "0e6df529-66b9-4d47-b8f0-617fe3f5ce93"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Kolkata\n",
+            "Date & Time: 2023-06-13 06:00:00\n",
+            "Temperature (in Kelvin): 307.12\n",
+            "Weather Description: scattered clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 09:00:00\n",
+            "Temperature (in Kelvin): 309.22\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 12:00:00\n",
+            "Temperature (in Kelvin): 307.64\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 15:00:00\n",
+            "Temperature (in Kelvin): 304.79\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 18:00:00\n",
+            "Temperature (in Kelvin): 304.08\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 21:00:00\n",
+            "Temperature (in Kelvin): 303.61\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 00:00:00\n",
+            "Temperature (in Kelvin): 303.39\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 03:00:00\n",
+            "Temperature (in Kelvin): 310.09\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 06:00:00\n",
+            "Temperature (in Kelvin): 316.76\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 09:00:00\n",
+            "Temperature (in Kelvin): 317.31\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 12:00:00\n",
+            "Temperature (in Kelvin): 310.59\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 15:00:00\n",
+            "Temperature (in Kelvin): 306.77\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 18:00:00\n",
+            "Temperature (in Kelvin): 305.99\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 21:00:00\n",
+            "Temperature (in Kelvin): 304.86\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 00:00:00\n",
+            "Temperature (in Kelvin): 304.99\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 03:00:00\n",
+            "Temperature (in Kelvin): 312.35\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 06:00:00\n",
+            "Temperature (in Kelvin): 318.42\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 09:00:00\n",
+            "Temperature (in Kelvin): 315.42\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 12:00:00\n",
+            "Temperature (in Kelvin): 312.4\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 15:00:00\n",
+            "Temperature (in Kelvin): 307.24\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 18:00:00\n",
+            "Temperature (in Kelvin): 305.47\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 21:00:00\n",
+            "Temperature (in Kelvin): 304.83\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 00:00:00\n",
+            "Temperature (in Kelvin): 304.77\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 03:00:00\n",
+            "Temperature (in Kelvin): 311.36\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 06:00:00\n",
+            "Temperature (in Kelvin): 317.63\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 09:00:00\n",
+            "Temperature (in Kelvin): 313.58\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 12:00:00\n",
+            "Temperature (in Kelvin): 309.26\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 15:00:00\n",
+            "Temperature (in Kelvin): 305.41\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 18:00:00\n",
+            "Temperature (in Kelvin): 304.36\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 21:00:00\n",
+            "Temperature (in Kelvin): 303.53\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 00:00:00\n",
+            "Temperature (in Kelvin): 303.32\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 03:00:00\n",
+            "Temperature (in Kelvin): 308.23\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 06:00:00\n",
+            "Temperature (in Kelvin): 312.61\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 09:00:00\n",
+            "Temperature (in Kelvin): 313.78\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 12:00:00\n",
+            "Temperature (in Kelvin): 307.15\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 15:00:00\n",
+            "Temperature (in Kelvin): 302.83\n",
+            "Weather Description: moderate rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 18:00:00\n",
+            "Temperature (in Kelvin): 303.99\n",
+            "Weather Description: moderate rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 21:00:00\n",
+            "Temperature (in Kelvin): 303.45\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-18 00:00:00\n",
+            "Temperature (in Kelvin): 303.29\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-18 03:00:00\n",
+            "Temperature (in Kelvin): 308.22\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It sucsessfully displaying next 7 days weather forecast"
+      ],
+      "metadata": {
+        "id": "uzmKz6sMJozC"
+      }
     }
   ]
 }
