It's show 6 days data of 3 hours of time gap

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM933j4PtsWgpfmwaS4SIz9",
+      "authorship_tag": "ABX9TyPf/N2hO9h/+XHiGHNZztUj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,54 +235,54 @@
     {
       "cell_type": "code",
       "source": [
-        "import requests\n",
+        "# import requests\n",
         "\n",
-        "# Enter your API key here\n",
-        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "# # Enter your API key here\n",
+        "# api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
         "\n",
-        "# base_url variable to store the URL\n",
-        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "# # base_url variable to store the URL\n",
+        "# base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
         "\n",
-        "# Ask for the city name from the user\n",
-        "city_name = input(\"Enter city name: \")\n",
+        "# # Ask for the city name from the user\n",
+        "# city_name = input(\"Enter city name: \")\n",
         "\n",
-        "# complete_url variable to store the complete URL address\n",
-        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "# # complete_url variable to store the complete URL address\n",
+        "# complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
         "\n",
-        "# Send the GET request to the API\n",
-        "response = requests.get(complete_url)\n",
+        "# # Send the GET request to the API\n",
+        "# response = requests.get(complete_url)\n",
         "\n",
-        "# Convert the response to JSON format\n",
-        "data = response.json()\n",
+        "# # Convert the response to JSON format\n",
+        "# data = response.json()\n",
         "\n",
-        "# Check if the city is found in the response data\n",
-        "if data[\"cod\"] != \"404\":\n",
+        "# # Check if the city is found in the response data\n",
+        "# if data[\"cod\"] != \"404\":\n",
         "\n",
-        "    # Get the list of forecasted weather data\n",
-        "    forecast_list = data[\"list\"]\n",
+        "#     # Get the list of forecasted weather data\n",
+        "#     forecast_list = data[\"list\"]\n",
         "\n",
-        "    # Print the weather forecast for each day\n",
-        "    for forecast in forecast_list:\n",
-        "        date_time = forecast[\"dt_txt\"]\n",
-        "        temperature = forecast[\"main\"][\"temp\"]\n",
-        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "#     # Print the weather forecast for each day\n",
+        "#     for forecast in forecast_list:\n",
+        "#         date_time = forecast[\"dt_txt\"]\n",
+        "#         temperature = forecast[\"main\"][\"temp\"]\n",
+        "#         weather_description = forecast[\"weather\"][0][\"description\"]\n",
         "\n",
-        "        print(\"Date & Time:\", date_time)\n",
-        "        print(\"Temperature (in Kelvin):\", temperature)\n",
-        "        print(\"Weather Description:\", weather_description)\n",
-        "        print(\"-----------------------------------\")\n",
+        "#         print(\"Date & Time:\", date_time)\n",
+        "#         print(\"Temperature (in Kelvin):\", temperature)\n",
+        "#         print(\"Weather Description:\", weather_description)\n",
+        "#         print(\"-----------------------------------\")\n",
         "\n",
-        "else:\n",
-        "    print(\"City not found\")\n"
+        "# else:\n",
+        "#     print(\"City not found\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7yWF2oLNJesO",
-        "outputId": "0e6df529-66b9-4d47-b8f0-617fe3f5ce93"
+        "outputId": "8fd503ac-ede7-4882-bafc-69300dacaa92"
       },
-      "execution_count": 38,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,15 +290,15 @@
           "text": [
             "Enter city name: Kolkata\n",
             "Date & Time: 2023-06-13 06:00:00\n",
-            "Temperature (in Kelvin): 307.12\n",
+            "Temperature (in Kelvin): 308.12\n",
             "Weather Description: scattered clouds\n",
             "-----------------------------------\n",
             "Date & Time: 2023-06-13 09:00:00\n",
-            "Temperature (in Kelvin): 309.22\n",
+            "Temperature (in Kelvin): 309.89\n",
             "Weather Description: broken clouds\n",
             "-----------------------------------\n",
             "Date & Time: 2023-06-13 12:00:00\n",
-            "Temperature (in Kelvin): 307.64\n",
+            "Temperature (in Kelvin): 307.97\n",
             "Weather Description: broken clouds\n",
             "-----------------------------------\n",
             "Date & Time: 2023-06-13 15:00:00\n",
