--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPf/N2hO9h/+XHiGHNZztUj",
+      "authorship_tag": "ABX9TyNz1mz23bYLLrNGAjZDtnTI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jI8Kc8JP6hZn",
-        "outputId": "c70c7b24-e813-4d43-9a14-9af82bf8d092"
+        "outputId": "11407385-e6d3-4c4f-be67-83a1999eee2d"
       },
-      "execution_count": 35,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 47,
       "metadata": {
         "id": "DAi7Ah4z4xNU"
       },
@@ -211,26 +211,10 @@
         "# \tprint(\" City Not Found \")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JjlXnbRFH0p9",
-        "outputId": "a35ab055-b662-4561-8fd5-76aaf9ae9ac5"
+        "id": "JjlXnbRFH0p9"
       },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter city name : Kolkata\n",
-            " Temperature (in kelvin unit) = 307.12\n",
-            " atmospheric pressure (in hPa unit) = 999\n",
-            " humidity (in percentage) = 66\n",
-            " description = haze\n"
-          ]
-        }
-      ]
+      "execution_count": 48,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -276,182 +260,10 @@
         "#     print(\"City not found\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7yWF2oLNJesO",
-        "outputId": "8fd503ac-ede7-4882-bafc-69300dacaa92"
+        "id": "7yWF2oLNJesO"
       },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter city name: Kolkata\n",
-            "Date & Time: 2023-06-13 06:00:00\n",
-            "Temperature (in Kelvin): 308.12\n",
-            "Weather Description: scattered clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 09:00:00\n",
-            "Temperature (in Kelvin): 309.89\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 12:00:00\n",
-            "Temperature (in Kelvin): 307.97\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 15:00:00\n",
-            "Temperature (in Kelvin): 304.79\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 18:00:00\n",
-            "Temperature (in Kelvin): 304.08\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 21:00:00\n",
-            "Temperature (in Kelvin): 303.61\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 00:00:00\n",
-            "Temperature (in Kelvin): 303.39\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 03:00:00\n",
-            "Temperature (in Kelvin): 310.09\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 06:00:00\n",
-            "Temperature (in Kelvin): 316.76\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 09:00:00\n",
-            "Temperature (in Kelvin): 317.31\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 12:00:00\n",
-            "Temperature (in Kelvin): 310.59\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 15:00:00\n",
-            "Temperature (in Kelvin): 306.77\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 18:00:00\n",
-            "Temperature (in Kelvin): 305.99\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 21:00:00\n",
-            "Temperature (in Kelvin): 304.86\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 00:00:00\n",
-            "Temperature (in Kelvin): 304.99\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 03:00:00\n",
-            "Temperature (in Kelvin): 312.35\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 06:00:00\n",
-            "Temperature (in Kelvin): 318.42\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 09:00:00\n",
-            "Temperature (in Kelvin): 315.42\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 12:00:00\n",
-            "Temperature (in Kelvin): 312.4\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 15:00:00\n",
-            "Temperature (in Kelvin): 307.24\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 18:00:00\n",
-            "Temperature (in Kelvin): 305.47\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 21:00:00\n",
-            "Temperature (in Kelvin): 304.83\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 00:00:00\n",
-            "Temperature (in Kelvin): 304.77\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 03:00:00\n",
-            "Temperature (in Kelvin): 311.36\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 06:00:00\n",
-            "Temperature (in Kelvin): 317.63\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 09:00:00\n",
-            "Temperature (in Kelvin): 313.58\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 12:00:00\n",
-            "Temperature (in Kelvin): 309.26\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 15:00:00\n",
-            "Temperature (in Kelvin): 305.41\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 18:00:00\n",
-            "Temperature (in Kelvin): 304.36\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 21:00:00\n",
-            "Temperature (in Kelvin): 303.53\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 00:00:00\n",
-            "Temperature (in Kelvin): 303.32\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 03:00:00\n",
-            "Temperature (in Kelvin): 308.23\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 06:00:00\n",
-            "Temperature (in Kelvin): 312.61\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 09:00:00\n",
-            "Temperature (in Kelvin): 313.78\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 12:00:00\n",
-            "Temperature (in Kelvin): 307.15\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 15:00:00\n",
-            "Temperature (in Kelvin): 302.83\n",
-            "Weather Description: moderate rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 18:00:00\n",
-            "Temperature (in Kelvin): 303.99\n",
-            "Weather Description: moderate rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 21:00:00\n",
-            "Temperature (in Kelvin): 303.45\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-18 00:00:00\n",
-            "Temperature (in Kelvin): 303.29\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-18 03:00:00\n",
-            "Temperature (in Kelvin): 308.22\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n"
-          ]
-        }
-      ]
+      "execution_count": 49,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -461,6 +273,92 @@
       "metadata": {
         "id": "uzmKz6sMJozC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "# Enter your API key here\n",
+        "api_key = \"88FEGQqi4ytcwIeuepny5TtibyBaIA3y\"\n",
+        "\n",
+        "# base_url variable to store the URL\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "# Ask for the city name from the user\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "\n",
+        "# complete_url variable to store the complete URL address\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "\n",
+        "# Send the GET request to the API\n",
+        "response = requests.get(complete_url)\n",
+        "\n",
+        "# Convert the response to JSON format\n",
+        "data = response.json()\n",
+        "\n",
+        "try:\n",
+        "    # Check if the city is found in the response data\n",
+        "    if data[\"cod\"] != \"404\":\n",
+        "\n",
+        "        # Get the list of forecasted weather data\n",
+        "        forecast_list = data.get(\"list\")\n",
+        "\n",
+        "        if forecast_list is None:\n",
+        "            raise KeyError(\"list key not found in the response.\")\n",
+        "\n",
+        "        # Create a list to store the forecast data for the next 7 days\n",
+        "        forecast_data = []\n",
+        "\n",
+        "        # Iterate over the forecast list and extract data for the next 7 days\n",
+        "        for forecast in forecast_list:\n",
+        "            date_time = forecast[\"dt_txt\"]\n",
+        "            date = date_time.split()[0]\n",
+        "            time = date_time.split()[1]\n",
+        "            temperature = forecast[\"main\"][\"temp\"]\n",
+        "            weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "            # Check if the time is the desired time (e.g., 12:00:00)\n",
+        "            if time == \"12:00:00\":\n",
+        "                forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
+        "\n",
+        "        # Check if forecast data is available\n",
+        "        if len(forecast_data) == 0:\n",
+        "            raise ValueError(\"No forecast data available for the next 7 days.\")\n",
+        "\n",
+        "        # Print the forecast data for the next 7 days\n",
+        "        for data in forecast_data:\n",
+        "            print(\"Date:\", data[\"Date\"])\n",
+        "            print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
+        "            print(\"Weather Description:\", data[\"Weather Description\"])\n",
+        "            print(\"-----------------------------------\")\n",
+        "\n",
+        "    else:\n",
+        "        print(\"City not found\")\n",
+        "\n",
+        "except (KeyError, ValueError) as e:\n",
+        "    print(\"Failed to retrieve weather forecast.\")\n",
+        "    print(str(e))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LXZK0j4aOkMB",
+        "outputId": "e3b0a2d5-90c0-4103-9068-a7961c1fbb31"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Kolkata\n",
+            "Failed to retrieve weather forecast.\n",
+            "'list key not found in the response.'\n"
+          ]
+        }
+      ]
     }
   ]
 }
