trying with different API-key

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz1mz23bYLLrNGAjZDtnTI",
+      "authorship_tag": "ABX9TyNikfDtgxKTAGAae4VGgN4r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -280,7 +280,7 @@
         "import requests\n",
         "\n",
         "# Enter your API key here\n",
-        "api_key = \"88FEGQqi4ytcwIeuepny5TtibyBaIA3y\"\n",
+        "api_key = \"34fde525f40d4dd2a421eb0ce530c4a0\"\n",
         "\n",
         "# base_url variable to store the URL\n",
         "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
@@ -305,29 +305,26 @@
         "        forecast_list = data.get(\"list\")\n",
         "\n",
         "        if forecast_list is None:\n",
-        "            raise KeyError(\"list key not found in the response.\")\n",
+        "            raise KeyError(\"'list' key not found in the response.\")\n",
         "\n",
         "        # Create a list to store the forecast data for the next 7 days\n",
         "        forecast_data = []\n",
         "\n",
         "        # Iterate over the forecast list and extract data for the next 7 days\n",
         "        for forecast in forecast_list:\n",
-        "            date_time = forecast[\"dt_txt\"]\n",
-        "            date = date_time.split()[0]\n",
-        "            time = date_time.split()[1]\n",
+        "            date = forecast[\"dt_txt\"].split()[0]\n",
         "            temperature = forecast[\"main\"][\"temp\"]\n",
         "            weather_description = forecast[\"weather\"][0][\"description\"]\n",
         "\n",
-        "            # Check if the time is the desired time (e.g., 12:00:00)\n",
-        "            if time == \"12:00:00\":\n",
-        "                forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
+        "            # Append the forecast data for each day to the list\n",
+        "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
         "\n",
         "        # Check if forecast data is available\n",
         "        if len(forecast_data) == 0:\n",
         "            raise ValueError(\"No forecast data available for the next 7 days.\")\n",
         "\n",
         "        # Print the forecast data for the next 7 days\n",
-        "        for data in forecast_data:\n",
+        "        for data in forecast_data[:7]:\n",
         "            print(\"Date:\", data[\"Date\"])\n",
         "            print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
         "            print(\"Weather Description:\", data[\"Weather Description\"])\n",
@@ -345,9 +342,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXZK0j4aOkMB",
-        "outputId": "e3b0a2d5-90c0-4103-9068-a7961c1fbb31"
+        "outputId": "705d02b8-084b-4143-e0c0-f6398a5da6c0"
       },
-      "execution_count": 53,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +352,7 @@
           "text": [
             "Enter city name: Kolkata\n",
             "Failed to retrieve weather forecast.\n",
-            "'list key not found in the response.'\n"
+            "\"'list' key not found in the response.\"\n"
           ]
         }
       ]
